--- a/app/globals.css
+++ b/app/globals.css
@@ -25,3 +25,18 @@ body {
     text-wrap: balance;
   }
 }
+
+@layer components {
+  .heading-secondary {
+    @apply text-2xl font-semibold text-white text-center
+    }
+  }
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
